# Boiling-Snow-TTS

./: .gitignore  CHANGELOG.md  README.md  README_EN.md  TECHNICAL_PATH.md  TUI_DESIGN.md  VOICE_DESIGN_SOP.md  boiling_snow_clone.py  install.sh  main.py  merge_final.py  package.json  pyproject.toml  release.sh  web_api.py
.agent/: DESIGN_SYSTEM.md  MODULE_INDEX.md  PROJECT.md
.agent/plans/: README.md
.agent/reviews/: README.md
.claude/skills/: tts.md
.githooks/: pre-commit
.github/workflows/: ai-init-guard.yml
cli/: app.py
cli/commands/: job.py  preset.py  tts.py  voice.py
configs/: README.md  candy_voice_v1.json  clone.json  config.json  design.json  dialogue.json  hualou_scene.json  hualou_taoist.json  hualou_test.json  hualou_two_hours.json  intimate_dialogue.json  intimate_pure.json  movie_config.json  podcast_config.json  scene_test.json  single.json  voice_design.json  voice_production.json
configs/presets/: AI女友_元气阳光_朝朝.json  AI女友_冰川理性_凌川_v1.json  AI女友_冷静御姐_雾岚_v1.json  AI女友_午夜耳语_夜棠.json  AI女友_批量设计.json  AI女友_批量设计_温热清冷.json  AI女友_拥抱治愈_南汐_v1.json  AI女友_晨光安抚_初霁.json  AI女友_暧昧撩人_星栀.json  AI女友_清冷月色_疏音.json  AI女友_温柔治愈_小晚.json  AI女友_温热奶感_棠梨.json  AI女友_落库批次_指定7人.json  AI女友_雪夜低语_霁雪_v1.json  小烛_五版整理清单.json  小璃_v2_首字保护.json  武侠_稚女-温婉_请教.json  武侠_稚子-倔强_我不哭.json  武侠_稚子-怯懦_别丢下我.json  武侠_稚子-机灵_偷学武功.json  武侠_稚子_江湖是什么.json  武侠_老朽-威严_门派规矩.json  武侠_老朽-慈祥_孩子别怕.json  武侠_老朽-疯癫_好酒.json  武侠_老朽-阴鸷_毒计.json  武侠_老朽_江湖啊.json
core/: cloner.py  designer.py  engine.py  processor.py  utils.py
core/modes/: cloner.py  designer.py  dialogue.py  podcast.py
docs/: COMMANDS.md  COVER_IMAGE_LOG.md  儿童声音首字保护指南.md
promotions/: juejin_article.md
scripts/: normalize_reference_audio.sh
tests/: test_clone_config_resolution.py  test_import.py
voice_designs/: 梦竹.json
webui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
webui/src/: App.jsx  index.css
webui/src/components/ui/: button.jsx  card.jsx
