[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowvoice-studio"
version = "0.1.0"
description = "Open-source Chinese TTS workstation for humans, AI, and agents. CLI first, WebUI on the roadmap."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
license = { text = "Apache-2.0" }
authors = [{ name = "Webkubor" }]

dependencies = [
  "transformers==4.57.3",
  "accelerate==1.12.0",
  "fastapi",
  "uvicorn",
  "python-multipart",
  "librosa",
  "torchaudio",
  "soundfile",
  "sox",
  "onnxruntime",
  "einops",
  "pydub",
  "typer>=0.12",
  "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/webkubor/snowvoice-studio"
Repository = "https://github.com/webkubor/snowvoice-studio"

[project.scripts]
snowvoice = "cli.app:app"
tts = "cli.app:app"
qwen-tts-demo = "qwen_tts.cli.demo:main"

[tool.setuptools]
packages = { find = { where = ["."] , include = ["qwen_tts*", "cli*"] } }
include-package-data = true

[tool.setuptools.package-data]
qwen_tts = ["py.typed", "**/*.npz"]
